# beacon-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.cpp  library.h
include/crypto/: encrypt.h  keys.h
protobufobjects/: CMakeLists.txt  message.proto
src/crypto/: encrypt.cpp  keys.cpp
